preliminary unit testing
