# api/controllers/json_object.js
@@ -1,21 +1,33 @@
 'use strict';
 
 var util = require('util');
+var Ajv = require('ajv');
 
 module.exports = {
-    validate: validate
+  validateObject: validateObject,
+  validateArray: validateArray
 };
 
-function validate(req, res) {
-    const object = req.swagger.params.body.schema.object;
-    const schema = req.swagger.params.body.schema.schema;
-    //console.log("YOLO:" + JSON.stringify(req.swagger.params.body.schema.schema));
-    
-    //TODO Call AJV
-    // variables defined in the Swagger document can be referenced using req.swagger.params.{parameter_name}
-    //var name = req.swagger.params.name.value || 'stranger';
-    var hello = util.format('Hello, %s!', 'YOLO');
+function validateArray(req, res) {
+  const objects = req.swagger.params.body.schema.objects;
+  const schema = req.swagger.params.body.schema.schema;
 
-    // this sends back a JSON response which is a single string
-    res.json(hello);
+  //TODO
+
+  res.json(util.format(true));
+}
+
+function validateObject(req, res) {
+  const object = req.swagger.params.body.originalValue.object;
+  const schema = req.swagger.params.body.originalValue.schema;
+
+  //console.log("Received Object:" + JSON.stringify(object));
+  //console.log("Received Schema:" + JSON.stringify(schema));
+
+  var ajv = new Ajv(/*{ v5: true}*/); // options can be passed, e.g. {allErrors: true}
+  var validate = ajv.compile(schema);
+  var valid = validate(object);
+
+  if (!valid) res.json(util.format(validate.errors));
+  res.json(util.format(valid));
 }
